--- a/Tradeterms/Base.lproj/Main.storyboard
+++ b/Tradeterms/Base.lproj/Main.storyboard
@@ -680,7 +680,7 @@
                     <navigationItem key="navigationItem" title="Mis Pertenecias" id="LzE-Y3-7rK">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="5Rt-56-pcu">
                             <connections>
-                                <segue destination="6Wg-Xp-Gxc" kind="show" identifier="AddItem" id="qLl-da-yOA"/>
+                                <segue destination="6Wg-Xp-Gxc" kind="presentation" identifier="AddItem" id="qLl-da-yOA"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -716,7 +716,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="ArticuloTableViewCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ArticuloTableViewCell" rowHeight="100" id="AOa-cd-ZNo" customClass="ArticuloTableViewCell" customModule="Tradeterms" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="ArticuloDeseosTableViewCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ArticuloDeseosTableViewCell" rowHeight="100" id="AOa-cd-ZNo" customClass="ArticuloDeseosTableViewCell" customModule="Tradeterms" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="AOa-cd-ZNo" id="mHb-O8-fYu">
@@ -741,9 +741,9 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="nameLabel" destination="ajx-Bz-iDY" id="lVn-J0-1qu"/>
-                                    <outlet property="photoImageView" destination="M3s-b6-NQ0" id="gfo-og-4ca"/>
-                                    <outlet property="ratingControl" destination="x3Q-ar-JhQ" id="n3o-ZQ-9b4"/>
+                                    <outlet property="nameLabel" destination="ajx-Bz-iDY" id="6yK-Pa-cbk"/>
+                                    <outlet property="photoImageView" destination="M3s-b6-NQ0" id="MXE-eP-bys"/>
+                                    <outlet property="ratingControl" destination="x3Q-ar-JhQ" id="bqP-LT-dkP"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -754,7 +754,11 @@
                     </tableView>
                     <tabBarItem key="tabBarItem" title="Deseos" image="Icon-small-deseos" id="Unn-JB-INK"/>
                     <navigationItem key="navigationItem" title="Mis Deseos" id="P99-Lh-NC2">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ze4-r0-GIz"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ze4-r0-GIz">
+                            <connections>
+                                <segue destination="Duu-s3-O9S" kind="presentation" identifier="AddItemDeseos" id="7qc-tj-5Tb"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TuL-GY-rVN" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -770,7 +774,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="btA-Q9-Rzv">
-                                <rect key="frame" x="20" y="28" width="335" height="395"/>
+                                <rect key="frame" x="20" y="72" width="335" height="395"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultphoto" translatesAutoresizingMaskIntoConstraints="NO" id="R93-Nl-22m">
                                         <rect key="frame" x="0.0" y="0.0" width="335" height="335"/>
@@ -800,7 +804,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Fda-mi-0h4">
-                                <rect key="frame" x="20" y="431" width="252" height="85"/>
+                                <rect key="frame" x="20" y="475" width="252" height="85"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Estado del artículo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IF2-ZK-XLr">
                                         <rect key="frame" x="0.0" y="0.0" width="252" height="20.5"/>
@@ -823,7 +827,7 @@
                                 </subviews>
                             </stackView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Escriba su Zona" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VmI-BY-tfe">
-                                <rect key="frame" x="20" y="524" width="335" height="30"/>
+                                <rect key="frame" x="20" y="568" width="335" height="30"/>
                                 <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -842,29 +846,24 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="YI9-PS-fLb"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Añadir Artículo" id="uJw-Va-4gO">
+                    <navigationItem key="navigationItem" title="Añadir Artículo Deseos" id="uJw-Va-4gO">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="dLs-DQ-eLF">
                             <connections>
                                 <action selector="cancel:" destination="RjL-H0-yR0" id="rfh-FQ-87z"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="8SG-GP-qse">
-                            <connections>
-                                <segue destination="kfZ-IF-mS4" kind="unwind" unwindAction="unwindToArticuloListWithSender:" id="fEH-Qo-YT6"/>
-                            </connections>
-                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="8SG-GP-qse"/>
                     </navigationItem>
                     <connections>
                         <outlet property="descriptionTextField" destination="Hjz-pG-8Hf" id="pyo-EY-3rB"/>
                         <outlet property="nameTextField" destination="6Pc-Dm-lea" id="eMV-Vo-uS4"/>
                         <outlet property="photoImageView" destination="R93-Nl-22m" id="Ze5-CL-CGs"/>
                         <outlet property="ratingControl" destination="io5-bG-GaY" id="guK-ot-cv7"/>
-                        <outlet property="saveButton" destination="8SG-GP-qse" id="S60-8e-GvJ"/>
+                        <outlet property="saveButton" destination="8SG-GP-qse" id="PoL-bn-z9I"/>
                         <outlet property="zoneTextField" destination="VmI-BY-tfe" id="8xD-Jl-ZBl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GUC-Hv-Edn" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <exit id="kfZ-IF-mS4" userLabel="Exit" sceneMemberID="exit"/>
                 <tapGestureRecognizer id="ZTw-pS-X3G">
                     <connections>
                         <action selector="selectImageFromPhotoLibrary:" destination="RjL-H0-yR0" id="Rgz-V6-RgJ"/>
@@ -872,6 +871,24 @@
                 </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="7457" y="-609"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Lio-Ss-dcT">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Duu-s3-O9S" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="FoQ-LQ-BcY">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="RjL-H0-yR0" kind="relationship" relationship="rootViewController" id="cik-xG-W8J"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Mq0-h5-P6g" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6558" y="-901"/>
         </scene>
     </scenes>
     <resources>
